add descriptions to each sub-page, and made CSS modifications to default -- afterwards, can make different branches

--- a/resort-activities.html
+++ b/resort-activities.html
@@ -25,5 +25,8 @@
       <a href="resort-contact.html">Contact Information</a>
     </li>
   </ul>
+
+  <h2>Activities</h2>
+  <p>Forget your troubles with our nature-focused activities.</p>
 </body>  
 </html>
