--- a/resort-arrangements.html
+++ b/resort-arrangements.html
@@ -25,5 +25,8 @@
       <a href="resort-contact.html">Contact Information</a>
     </li>
   </ul>
+
+  <h2>Travel Arrangements</h2>
+  <p>See how you can make Sunny Isles a part of your getaway today!</p>
 </body>  
 </html>
