--- a/resort-contact.html
+++ b/resort-contact.html
@@ -25,5 +25,8 @@
     </li>
     <li>Contact Information</li>
   </ul>
+
+  <h2>Contact Information</h2>
+  <p>Ready to schedule a visit to Sunny Isles Resort? Set up a reservation today!</p>
 </body>
 </html>
