--- a/resort-home.html
+++ b/resort-home.html
@@ -25,5 +25,9 @@
       <a href="resort-contact.html">Contact Information</a>
     </li> 
   </ul>
+
+  <h2>Home</h2>
+  <p>Welcome to Sunny Isles Resort, a place to set aside your burdens and rejuvenate your soul.</p>
+
 </body>
 </html>
