--- a/resort-pictures.html
+++ b/resort-pictures.html
@@ -25,5 +25,8 @@
       <a href="resort-contact.html">Contact Information</a>
     </li>
   </ul>
+
+  <h2>Pictures, etc.</h2>
+  <p>Take a closer look at Sunny Isles Resort!</p>
 </body>
 </html>
