--- a/resort-accommodations.html
+++ b/resort-accommodations.html
@@ -25,5 +25,8 @@
       <a href="resort-contact.html">Contact Information</a>
     </li>
   </ul>
+
+  <h2>Accommodations</h2>
+  <p>Take a look at what we have to offer!</p>
 </body>
 </html>
